--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,9 @@
 
 .margin-bottom-50 {margin-bottom: 50px;}
 .margin-top-50 {margin-top: 50px;}
+
+div.about-contents {
+  text-align: left !important;
+  max-width: 800px;
+  margin: auto;
+}
